src/objects/LeanData__LD_Search__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Match_0__c</fullName>
        <label>Match 0</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_100__c</fullName>
        <label>Match 100</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_101__c</fullName>
        <label>Match 101</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Tokens_0__c</fullName>
        <externalId>true</externalId>
        <label>Tokens 0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tokens_1__c</fullName>
        <externalId>true</externalId>
        <label>Tokens 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tokens_2__c</fullName>
        <externalId>true</externalId>
        <label>Tokens 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LeanData Search</label>
    <nameField>
        <label>LeanData Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeanData Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>